--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ GOOGLE_CLIENT_SECRET = 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
 
 MONGODB_URI = mongodb+srv://amanleyskj:3G2EGv4A4lReDOOY@yiipcluster.of7olmw.mongodb.net/?retryWrites=true&w=majority
 
-NEXTAUTH_URL = http://localhost:3000
+NEXTAUTH_URL = https://new-trap-p0fxp2h1v-anthonymanleysu-protonmailc.vercel.app
 
-NEXTAUTH_URL_INTERNAL = http://localhost:3000
+NEXTAUTH_URL_INTERNAL = https://new-trap-p0fxp2h1v-anthonymanleysu-protonmailc.vercel.app
 
 NEXTAUTH_SECRET = sRYI/XUNVIdDMxWyz/ev0ftP8VFtjPe9rQBnAJCDj9k=
