register and login nearing completion

--- a/.env
+++ b/.env
@@ -8,4 +8,6 @@ NEXTAUTH_URL = https://new-trap-p0fxp2h1v-anthonymanleysu-protonmailc.vercel.app
 
 NEXTAUTH_URL_INTERNAL = https://new-trap-p0fxp2h1v-anthonymanleysu-protonmailc.vercel.app
 
+TOKEN_SECRET = trapwangzisthebestwangz
+
 NEXTAUTH_SECRET = sRYI/XUNVIdDMxWyz/ev0ftP8VFtjPe9rQBnAJCDj9k=
