--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "rxjs": "^7.8.1",
+    "supports-color": "^8.1.1",
     "tailwindcss": "3.3.3"
   }
 }
