--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
     "rxjs": "^7.8.1",
     "supports-color": "^8.1.1",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.20",
+    "typescript": "5.1.6"
   }
 }
